--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </nav>
   </header>
-
+  <section>
   <div class="pt-8 px-4">
     <div class="max-w-6xl mx-auto relative" x-data="{
     activeSlide: 1,
@@ -123,7 +123,7 @@
       </div>
     </div>
   </div>
-
+  </section>
   <section class="pt-9 pb-16 px-8 md:px-12 bg-green-100">
     <div class="max-w-7xl mx-auto md:flex md:items-center md:justify-betweenr">
       <div class="md:flex-1 md:mr-6 pt-9">
@@ -142,6 +142,41 @@
       </div>
     </div>
   </section>
+  <section class="py-9 px-8 md:px-12 bg-green-100">
+    <p class="max-w-7xl mx-auto text-xl md:text-3xl font-bold text-gray-800 mb-6">SẢN PHẨM CHÚNG TÔI GỒM:</p>
+    <div class="max-w-7xl mx-auto md:flex md:items-center md:justify-center">     
+      <div class="flex-1 h-[1700px] sm:h-[830px] grid sm:grid-cols-2 md:grid-cols-3 gap-8">
+        <div class="h-[406px] bg-white rounded-lg shadow-lg overflow-hidden">
+          <img class="h-[330px] w-full object-fill" src="https://scontent.fhan5-1.fna.fbcdn.net/v/t39.30808-6/313417716_1544091989422494_5843254937351348494_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=0debeb&_nc_ohc=2p1FFkWzU-4AX94Dr9a&_nc_ht=scontent.fhan5-1.fna&oh=00_AfCwuGI-T5oErmXFYFZtd7kqu37erhGIkoZYtVV6r3ql5Q&oe=642321AB" alt=""/>
+          <p class="text-center mt-6 text-2xl font-bold text-red-600"><a class="ring-2 rounded-lg shadow-lg ring-blue-300 ring-offset-blue-300 bg-blue-300 hover:bg-white hover:text-black" href="https://www.facebook.com/mali.nois.56">Huấn luyện chó đức</a></p>
+        </div>
+        <div class="h-[406px] bg-white rounded-lg shadow-lg overflow-hidden">
+          <img class="h-[330px] w-full object-fill" src="https://scontent.fhan5-1.fna.fbcdn.net/v/t39.30808-6/313417716_1544091989422494_5843254937351348494_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=0debeb&_nc_ohc=2p1FFkWzU-4AX94Dr9a&_nc_ht=scontent.fhan5-1.fna&oh=00_AfCwuGI-T5oErmXFYFZtd7kqu37erhGIkoZYtVV6r3ql5Q&oe=642321AB" alt=""/>
+          <p class="text-center mt-6 text-2xl font-bold text-red-600"><a class="ring-2 rounded-lg shadow-lg ring-blue-300 ring-offset-blue-300 bg-blue-300 hover:bg-white hover:text-black" href="https://www.facebook.com/mali.nois.56">Huấn luyện chó bỉ</a></p>
+        </div>
+        <div class="h-[406px] bg-white rounded-lg shadow-lg overflow-hidden">
+          <img class="h-[330px] w-full object-fill" src="https://scontent.fhan5-1.fna.fbcdn.net/v/t39.30808-6/313417716_1544091989422494_5843254937351348494_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=0debeb&_nc_ohc=2p1FFkWzU-4AX94Dr9a&_nc_ht=scontent.fhan5-1.fna&oh=00_AfCwuGI-T5oErmXFYFZtd7kqu37erhGIkoZYtVV6r3ql5Q&oe=642321AB" alt=""/>
+          <p class="text-center mt-6 text-2xl font-bold text-red-600"><a class="ring-2 rounded-lg shadow-lg ring-blue-300 ring-offset-blue-300 bg-blue-300 hover:bg-white hover:text-black" href="https://www.facebook.com/mali.nois.56">Huấn luyện chó ta</a></p>
+        </div>
+        <div class="h-[406px] bg-white rounded-lg shadow-lg overflow-hidden">
+          <img class="h-[330px] w-full object-fill" src="https://scontent.fhan5-1.fna.fbcdn.net/v/t39.30808-6/313417716_1544091989422494_5843254937351348494_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=0debeb&_nc_ohc=2p1FFkWzU-4AX94Dr9a&_nc_ht=scontent.fhan5-1.fna&oh=00_AfCwuGI-T5oErmXFYFZtd7kqu37erhGIkoZYtVV6r3ql5Q&oe=642321AB" alt=""/>
+          <p class="text-center mt-6 text-2xl font-bold text-red-600"><a class="ring-2 rounded-lg shadow-lg ring-blue-300 ring-offset-blue-300 bg-blue-300 hover:bg-white hover:text-black" href="https://www.facebook.com/mali.nois.56">Huấn luyện chim</a></p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="bg-green-200 w-screen h-[175px]">
+    <div class="max-w-7xl mx-auto ">    
+      <p class="font-bold pt-[20px] text-gray-800 ml-2">Địa chỉ công ty:</p>
+      <p class="font-bold text-gray-800 ml-2">Xóm 4 Đông Dương, Đông Hưng, Thái Bình</p>
+      <p class="font-bold text-gray-800 ml-2">Sđt: 0976683564</p>
+      <p class="font-bold text-gray-800 pb-3 ml-2">Website thiết kế bởi Vũ Minh Hoàng. Sđt: 0332263388</p>
+      <p class="font-bold text-gray-800 text-center text-2xl h-[33px] relative">La Thăng House
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="h-5 w-5 inline absolute top-0"><!-- Font Awesome Pro 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) --><path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm117.134 346.753c-1.592 1.867-39.776 45.731-109.851 45.731-84.692 0-144.484-63.26-144.484-145.567 0-81.303 62.004-143.401 143.762-143.401 66.957 0 101.965 37.315 103.422 38.904a12 12 0 0 1 1.238 14.623l-22.38 34.655c-4.049 6.267-12.774 7.351-18.234 2.295-.233-.214-26.529-23.88-61.88-23.88-46.116 0-73.916 33.575-73.916 76.082 0 39.602 25.514 79.692 74.277 79.692 38.697 0 65.28-28.338 65.544-28.625 5.132-5.565 14.059-5.033 18.508 1.053l24.547 33.572a12.001 12.001 0 0 1-.553 14.866z"/></svg>
+      </p>
+    </div>
+  </footer>
 </body>
 
 </html>
