--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="absolute inset-0 flex">
         <div class="flex items-center justify-start w-1/2">
           <button x-on:click="activeSlide = activeSlide === 1 ? slides.length : activeSlide - 1"
-            class="bg-slate-100 text-slate-500 hover:bg-blue-500 transition font-bold rounded-full w-12 h-12 shadow text-center flex justify-center items-center md:-ml-16">
+            class="bg-slate-100 text-slate-500 hover:bg-blue-500 transition font-bold rounded-full w-6 h-6 sm:w-12 sm:h-12 opacity-60 hover:opacity-100 shadow text-center flex justify-center items-center">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="w-6 h-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
@@ -103,7 +103,7 @@
         </div>
         <div class="flex items-center justify-end w-1/2">
           <button x-on:click="activeSlide = activeSlide === slides.length ? 1 : activeSlide + 1"
-            class="bg-slate-100 text-slate-500 hover:bg-blue-500 transition font-bold rounded-full w-12 h-12 shadow text-center flex justify-center items-center md:-mr-16">
+            class="bg-slate-100 text-slate-500 hover:bg-blue-500 transition font-bold rounded-full w-6 h-6 sm:w-12 sm:h-12 opacity-60 hover:opacity-100 shadow text-center flex justify-center items-center">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="w-6 h-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
@@ -114,7 +114,7 @@
 
       <div class="absolute w-full flex items-center justify-center px-4">
         <template x-for="slide in slides" :key="slide.id">
-          <button class="flex-1 w-4 h-2 mt-4 mx-2 rounded-full overflow-hidden transition-colors duration-200 ease-out 
+          <button class="w-[50px] sm:w-[100px] h-1 mt-4 mx-2 rounded-full overflow-hidden transition-colors duration-200 ease-out 
           hover:bg-slate-600 hover:shadow-lg" :class="{
             'bg-blue-500' : activeSlide === slide.id,
             'bg-slate-300' : activeSlide !== slide.id,
