--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="max-w-7xl mx-auto md:flex md:items-center md:justify-center">     
       <div class="flex-1 h-[1700px] sm:h-[830px] grid sm:grid-cols-2 md:grid-cols-3 gap-8">
         <div class="h-[406px] bg-white rounded-lg shadow-lg overflow-hidden">
-          <img class="h-[330px] w-full object-fill" src="https://kenh14cdn.com/2018/2/25/photo-1-15195745713101928664583.jpg" alt=""/>
+          <img class="h-[330px] w-full object-fill" src="https://image-us.eva.vn/upload/3-2021/images/2021-09-16/image10-1631783836-199-width650height460.jpg" alt=""/>
           <p class="text-center mt-6 text-2xl font-bold text-red-600"><a class="ring-2 rounded-lg shadow-lg ring-blue-300 ring-offset-blue-300 bg-blue-300 hover:bg-white hover:text-black" href="https://www.facebook.com/mali.nois.56">Huấn luyện chó đức</a></p>
         </div>
         <div class="h-[406px] bg-white rounded-lg shadow-lg overflow-hidden">
