--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <section class="py-9 px-8 md:px-12 bg-green-100">
     <p class="max-w-7xl mx-auto text-xl md:text-3xl font-bold text-gray-800 mb-6">SẢN PHẨM CHÚNG TÔI GỒM:</p>
     <div class="max-w-7xl mx-auto md:flex md:items-center md:justify-center">     
-      <div class="flex-1 h-[2700px] sm:h-[830px] grid sm:grid-cols-2 md:grid-cols-3 gap-8">
+      <div class="flex-1 h-[2700px] sm:h-[1340px] md:h-[830px] grid sm:grid-cols-2 md:grid-cols-3 gap-8">
         <div class="h-[406px] bg-white rounded-lg shadow-lg overflow-hidden">
           <img class="h-[330px] w-full object-fill" src="https://scontent.xx.fbcdn.net/v/t1.15752-9/327958835_1680176969105479_4788988349133144474_n.jpg?stp=dst-jpg_p206x206&_nc_cat=108&ccb=1-7&_nc_sid=aee45a&_nc_ohc=V95SbQKMcb8AX-5_ipg&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdR8KZNWw3WKHwQkGd5nYd60oqiFTrhNiaT5qYDt4-Y_9w&oe=64465DC0" alt=""/>
           <p class="text-center mt-6 text-2xl font-bold text-red-600"><a class="ring-2 rounded-lg shadow-lg ring-blue-300 ring-offset-blue-300 bg-blue-300 hover:bg-white hover:text-black" href="https://www.facebook.com/mali.nois.56">Huấn luyện chó thể thao</a></p>
